--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
+<title>Hellow Media</title>
+<meta charset="utf-8">
+<link rel="icon" type="image/x-icon" href="./images/logo/favicon.ico">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./gallery.css">
+
+<style> @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap'); </style>
+
+<link rel="import" href="navbar.html">
+
+</head>
+
+<body>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2118444523442609"
+     crossorigin="anonymous"></script>
+
+<nav class="navbar">
+	<ul class="navbar-nav">
+		<li class="logo">
+			<a href="javascript:void(0)" class="nav-link">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="40" width="40"><path d="m22.375 29-8.083-8.042q-.209-.25-.292-.479-.083-.229-.083-.521 0-.25.083-.5t.292-.458l8.083-8.083q.417-.417 1-.417t1 .417q.375.416.375 1 0 .583-.417 1l-7.041 7.041 7.083 7.084q.375.416.375.979 0 .562-.375.979-.417.417-1.021.417-.604 0-.979-.417Z"/></svg>
+				<span class="link-text">HM Mods</span>
+			</a>
+		</li>
+		
+		<li class="nav-item">
+			<a href="./index" class="nav-link">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="40" width="40"><path d="M9.458 32.208h5.834v-10.25h9.416v10.25h5.834V16.375L20 8.458 9.458 16.375Zm0 2.792q-1.166 0-1.979-.812-.812-.813-.812-1.98V16.375q0-.667.291-1.25.292-.583.834-.958L18.333 6.25q.375-.292.792-.417.417-.125.875-.125t.875.125q.417.125.792.417l10.541 7.917q.542.375.834.958.291.583.291 1.25v15.833q0 1.167-.812 1.98-.813.812-1.979.812h-8.584V24.708h-3.916V35ZM20 20.333Z"/></svg>
+				<span class="link-text">Home</span>
+			</a>
+		</li>
+		
+		<li class="nav-item">
+			<a href="https://beta.hellowmedia.com/contact" class="nav-link">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="40" width="40"><path d="M20 36.667q-3.458 0-6.5-1.313-3.042-1.312-5.292-3.562T4.646 26.5Q3.333 23.458 3.333 20t1.313-6.5q1.312-3.042 3.562-5.292T13.5 4.646q3.042-1.313 6.5-1.313t6.5 1.313q3.042 1.312 5.292 3.562t3.562 5.292q1.313 3.042 1.313 6.5v2.292q0 2.375-1.667 4.02-1.667 1.646-4.042 1.646-1.5 0-2.833-.708-1.333-.708-2.083-1.958-1.084 1.291-2.667 1.979-1.583.687-3.375.687-3.333 0-5.646-2.312-2.312-2.313-2.312-5.646 0-3.333 2.312-5.667Q16.667 12 20 12q3.333 0 5.646 2.333 2.312 2.334 2.312 5.667v2.292q0 1.25.875 2.062.875.813 2.125.813 1.167 0 2.042-.813.875-.812.875-2.062V20q0-5.75-4.063-9.812Q25.75 6.125 20 6.125q-5.75 0-9.812 4.063Q6.125 14.25 6.125 20q0 5.75 4.063 9.812Q14.25 33.875 20 33.875h7.333q.584 0 .979.396.396.396.396 1.021 0 .583-.396.979-.395.396-.979.396Zm0-11.5q2.167 0 3.688-1.5 1.52-1.5 1.52-3.667 0-2.208-1.52-3.708-1.521-1.5-3.688-1.5-2.167 0-3.688 1.5-1.52 1.5-1.52 3.708 0 2.167 1.52 3.667 1.521 1.5 3.688 1.5Z"/></svg>
+				<span class="link-text">Contact</span>
+			</a>
+		</li>
+		
+	</ul>
+</nav>
+
+<div class="banner">Welcome to the Hellow Media mods page!<button type="button" onclick="location.href='https://www.hellowmedia.com';">Go Home</button></div>
+
+<div class="header">
+	<img src="./images/logo/hmlogo.png" alt="Hellow Media" width="256" height="256">
+</div>
+
+<div class="format">
+	
+<h1>Supported Games</h1>	
+	
+	<div class="row">
+<!--		
+		<div class="column">
+			<a href="./hellowbr/about">
+				<img src="./images/games/hellowbr.png" alt="HellowBR">
+			</a>
+			<div class="imagedesc">HellowBR Minecraft Server</div>
+		</div>
+-->		
+	<h2>Coming Soon!</h2>
+	
+	</div>
+
+<footer>
+</footer>
+
+</div>
+
+</body>
+</html>
