--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<a href="./stormworks/">
 				<img src="./images/games/stormworks.png" alt="Stormworks">
 			</a>
-			<div class="imagedesc">HellowBR Minecraft Server</div>
+			<div class="imagedesc">Stormworks</div>
 		</div>
 
 <footer>
