Added some things

--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
 			</a>
 			<div class="imagedesc">Stormworks</div>
 		</div>
+		
+		<div class="column">
+			<a href="./minecraft/">
+				<img src="./images/games/minecraft.png" alt="Minecraft">
+			</a>
+			<div class="imagedesc">Minecraft</div>
+		</div>
+		
+	</div>	
 
 <footer>
 </footer>
